Fix menu layout on mobile

--- a/resources/assets/sass/_smag.scss
+++ b/resources/assets/sass/_smag.scss
@@ -28,6 +28,10 @@ h2 {
 	color: $darkestblue;
 }
 
+.menu-open {
+	overflow: hidden;
+}
+
 .left {
 	display: inline-block; // overflow: hidden;
 	float: left;
@@ -88,16 +92,18 @@ h2 {
 		}
 	}
 	@media (max-width: $screen-sm-max) {
+		overflow: auto;
 		transform: translateX(-100vw);
 		transition: 0.3s ease-in-out;
-		position: absolute;
+		position: fixed;
 		top: 0;
 		left: 0;
 		width: 100%;
 		background: rgba(255, 255, 255, 0.9);
 		z-index: 4;
 		min-height: 100%;
-		padding-top: 60px;
+		max-height: 100vh;
+		padding-top: 30px;
 
 		.menu-open & {
 			transform: none;
@@ -105,7 +111,18 @@ h2 {
 		// .menu .navbar .navbar-nav li a {
 		// color: white;
 		// }
+		.hd {
+			padding-left: 30px;
+			font-size: 1.5rem;
+		}
+
 		.menu .navbar .navbar-nav {
+			li a {
+				&:hover {
+					background: lightgray;
+				}
+			}
+
 			.dropdown {
 				.dropdown-menu {
 					display: none!important;
@@ -127,8 +144,13 @@ h2 {
 		margin-left: -290px;
 
 		.hd {
+			color: transparent;
 			background: transparent url("../images/smag-menu-title-principal.gif") no-repeat;
 			height: 48px;
+
+			&.members {
+				background: transparent url("../images/smag-menu-title-membres.gif") no-repeat;
+			}
 		}
 
 		.navbar {
@@ -155,6 +177,7 @@ h2 {
 		font-size: 0.8rem;
 		margin-bottom: 5px;
 		border-bottom: 2px solid black;
+		z-index: 1;
 
 		h1 {
 			color: black;
